# TCM-Simulator

./: CMakeLists.txt  README.md
Sources/: analytics.cpp  constants.cpp  constants.h  file_writter.h  main.cpp  seeds_handler.cpp
Sources/Baseband Modulator/: baseband_modulator.cpp  baseband_modulator.h
Sources/Byte Coder/: byte_decoder.cpp  byte_decoder.h  byte_encoder.cpp  byte_encoder.h
Sources/Convolutional Coder/: convolutional_encoder.cpp  convolutional_encoder.h
Sources/Message Coder/: message_decoder.cpp  message_decoder.h  message_encoder.cpp  message_encoder.h
Sources/Noise Adder/: noise_adder.cpp  noise_adder.h
Sources/Viterbi Decoder/: viterbi_decoder.cpp  viterbi_decoder.h
Sources/ViterbiDecoder/: ViterbiDecoder.cpp
